--- a/style.css
+++ b/style.css
@@ -64,8 +64,18 @@
     display: none;
 }
 
+.notification-container p {
+    margin: 0;
+}
+
 .notification-container.show {
     display: block;
+    color: #842029;
+    background-color: #f8d7da;
+    border-color: #f5c2c7;
+    padding: 2px 10px 2px 10px;
+    border-radius: 10px;
+    margin: 20px 0 20px 0;
 }
 
 .figure-part {
